--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a href="#"><span lang="en">WebStudio</span></a>
       <nav>
         <ul>
           <li><a href="./index.html">Студія</a></li>
@@ -18,9 +18,83 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+        </li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <main>
+      <section>
+        <ul>
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="./images/notebook.jpg" alt="notebook" width="370" height="294" />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/basketball.jpg" alt="poster_basketball" width="370" height="294" />
+            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/fish.jpg" alt="fish" width="370" height="294" />
+            <h3>Русторан <span lang="en">SeaFood</span></h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" />
+            <h3>Проєкт <span lang="en">Prime</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/box.jpg" alt="box" width="370" height="294" />
+            <h3>Проєкт <span lang="en">Boxes</span></h3>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/mac.jpg" alt="macbook" width="370" height="294" />
+            <h3><span lang="en">Inspiration has no Borders</span></h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/book.jpg" alt="book" width="370" height="294" />
+            <h3>Видання <span lang="en">Limited Edition</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/tablet.jpg" alt="card" width="370" height="294" />
+            <h3>Проєкт <span lang="en">LAB</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/notebook_hand.jpg" alt="notebook_hand" width="370" height="294" />
+            <h3><span lang="en">Growing Business</span></h3>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="#"><span lang="en">WebStudio</span></a>
+      <address>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+          </li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
