--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="#">WebStudio</a>
+    <header class="page-header">
+      <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
       <nav>
-        <ul>
+        <ul class="main-navigation">
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="main-info">
+        <li>
+          <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+        </li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <section class="page-main">
+        <h1 class="page-main_main-text">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
@@ -83,11 +85,13 @@
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="#"><span lang="en" class="logo">WebStudio</span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+          </li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
