--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <title>Web Studio (Version 2.1)</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
@@ -27,9 +28,9 @@
     <main>
       <section class="page-main">
         <h1 class="page-main_main-text">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="page-main_main-text_button">Замовити послугу</button>
       </section>
-      <section>
+      <section class="page-middle">
         <h2>Наші особливості</h2>
         <ul>
           <li>
@@ -50,7 +51,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class = 'gallery'>
         <h2>Чим ми займаємося</h2>
         <ul>
           <li><img src="./images/computer.jpg" alt="computer" width="370" height="294" /></li>
@@ -58,7 +59,7 @@
           <li><img src="./images/hand.jpg" alt="tablet" width="370" height="294" /></li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -84,8 +85,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#"><span lang="en" class="logo">WebStudio</span></a>
+    <footer class="page-footer">
+       <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
