work_with_footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web Studio (Version 2.1)</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
@@ -89,9 +90,9 @@
        <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
+        <ul class='info-footer'>
           <li>
-            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+            <a href="mailto:info@devstudio.com"><span lang="en" >info@devstudio.com</span></a>
           </li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
