--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main>
+    <main class ='filling'>
       <section class="page-main">
         <h1 class="page-main_main-text">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="page-main_main-text_button">Замовити послугу</button>
@@ -87,10 +87,10 @@
       </section>
     </main>
     <footer class="page-footer">
-       <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
+       <a href="#"><span lang="en"><span lang="en" class="logo">Web</span><span class="white-logo">Studio</span></a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class='info-footer'>
+          <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
             <a href="mailto:info@devstudio.com"><span lang="en" >info@devstudio.com</span></a>
           </li>
