--- a/portfolio.html
+++ b/portfolio.html
@@ -16,30 +16,30 @@
     />
   </head>
   <body>
-    <header>
-      <a href="#"><span lang="en">WebStudio</span></a>
+    <header class="page-header">
+      <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
       <nav>
-        <ul>
+        <ul class="main-navigation">
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="main-info">
         <li>
           <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
         </li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main>
+    <main class="page-middle">
       <section>
         <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="page-portfolio_main-text_button">Усі</button></li>
+          <li><button type="button" class="page-portfolio_main-text_button">Веб-сайти</button></li>
+          <li><button type="button" class="page-portfolio_main-text_button">Додатки</button></li>
+          <li><button type="button" class="page-portfolio_main-text_button">Дизайн</button></li>
+          <li><button type="button" class="page-portfolio_main-text_button">Маркетинг</button></li>
         </ul>
       </section>
       <section>
@@ -92,13 +92,13 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#"><span lang="en">WebStudio</span></a>
+    <footer class="page-footer">
+       <a href="#"><span lang="en"><span lang="en" class="logo">Web</span><span class="white-logo">Studio</span></a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
+        <ul class='info-footer'>
+          <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
-            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
+            <a href="mailto:info@devstudio.com"><span lang="en" >info@devstudio.com</span></a>
           </li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
