--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta charset="UTF-8" />
     <title>Web Studio (Version 2.1)</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="page-header">
-      <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
+      <a href="#" class="logo"><span lang="en">Web</span>Studio</a>
       <nav>
         <ul class="main-navigation">
           <li><a href="./index.html">Студія</a></li>
@@ -26,7 +32,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main class ='filling'>
+    <main class="">
       <section class="page-main">
         <h1 class="page-main_main-text">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="page-main_main-text_button">Замовити послугу</button>
@@ -52,7 +58,7 @@
           </li>
         </ul>
       </section>
-      <section class = 'gallery'>
+      <section class="gallery">
         <h2>Чим ми займаємося</h2>
         <ul>
           <li><img src="./images/computer.jpg" alt="computer" width="370" height="294" /></li>
@@ -87,12 +93,12 @@
       </section>
     </main>
     <footer class="page-footer">
-       <a href="#"><span lang="en"><span lang="en" class="logo">Web</span><span class="white-logo">Studio</span></a>
+      <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
-        <ul class='info-footer'>
+        <ul class="info-footer">
           <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
-            <a href="mailto:info@devstudio.com"><span lang="en" >info@devstudio.com</span></a>
+            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
           </li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
