--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
       </section>
     </main>
     <footer class="page-footer">
-       <a href="#"><span lang="en"><span lang="en" class="logo">Web</span><span class="white-logo">Studio</span></a>
+       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
         <ul class='info-footer'>
           <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
