--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           </li>
           <li>
             <img src="./images/fish.jpg" alt="fish" width="370" height="294" />
-            <h3>Русторан <span lang="en">SeaFood</span></h3>
+            <h3>Ресторан <span lang="en">SeaFood</span></h3>
             <p>Додаток</p>
           </li>
           <li>
