--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="main-navigation">
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="./">Контакти</a></li>
         </ul>
       </nav>
       <ul class="main-info">
