--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main class="">
+    <main class="filling">
       <section class="page-main">
         <h1 class="page-main_main-text">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="page-main_main-text_button">Замовити послугу</button>
