--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
           <li><button type="button" class="page-portfolio_main-text_button">Маркетинг</button></li>
         </ul>
       </section>
-      <section>
+      <section class="products">
         <ul>
           <li>
             <img src="./images/notebook.jpg" alt="notebook" width="370" height="294" />
