--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <a href="#" class="logo"><span lang="en">Web</span>Studio</a>
       <nav>
         <ul class="main-navigation">
-          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./index.html" class="studio">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="./">Контакти</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul class="main-info">
