--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <a href="#" class="logo"><span lang="en">Web</span>Studio</a>
       <nav>
         <ul class="main-navigation">
-          <li><a href="./index.html" class="studio">Студія</a></li>
+          <li>
+            <a href="./index.html"><span class="studio">Студія</span></a>
+          </li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
