--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
   </head>
   <body>
     <header class="page-header">
-      <a href="#"><span lang="en"><span lang="en" class="logo">Web<span>Studio</span></span></a>
+      <a href="#" class="logo"><span lang="en">Web</span>Studio</a>
       <nav>
         <ul class="main-navigation">
-          <li><a href="./index.html">Студія</a></li>
+          <li class="studio"><a href="./index.html"><span class="studio">Студія</a></span></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
@@ -93,12 +93,12 @@
       </section>
     </main>
     <footer class="page-footer">
-       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
+      <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
-        <ul class='info-footer'>
+        <ul class="info-footer">
           <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
-            <a href="mailto:info@devstudio.com"><span lang="en" >info@devstudio.com</span></a>
+            <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
           </li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
