--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <a href="./index.html"><span class="studio">Студія</span></a>
           </li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li>
+            <a href="./"><span class="contacts">Контакти</span></a>
+          </li>
         </ul>
       </nav>
       <ul class="main-info">
