--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </main>
     <footer class="page-footer">
       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
-      <address>
+      <address class="adress-footer">
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="info-footer">
-          <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
             <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
           </li>
