--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,8 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main class="page-middle">
-      <section>
+    <main>
+      <section class="page-middle">
         <ul>
           <li><button type="button" class="page-portfolio_main-text_button">Усі</button></li>
           <li><button type="button" class="page-portfolio_main-text_button">Веб-сайти</button></li>
@@ -95,8 +95,8 @@
     <footer class="page-footer">
       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
+        
         <ul class="info-footer">
-          <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
           <li>
             <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
           </li>
