--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
     <footer class="page-footer">
       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
-        
+         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="info-footer">
           <li>
             <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
