--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <ul class="main-navigation">
           <li class="studio"><a href="./index.html"><span class="studio">Студія</a></span></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="./"><span class="contacts">Контакти</span></a></li>
+          <li><a href="./"><span>Контакти</span></a></li>
         </ul>
       </nav>
       <ul class="main-info">
