--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li>
-            <a href="./"><span class="contacts">Контакти</span></a>
+            <a href="./"><span>Контакти</span></a>
           </li>
         </ul>
       </nav>
