--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,10 @@
       <a href="#" class="logo"><span lang="en">Web</span>Studio</a>
       <nav>
         <ul class="main-navigation">
-          <li class="studio"><a href="./index.html"><span class="studio">Студія</a></span></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="studio"><a href="./index.html">Студія</a></li>
+          <li>
+            <a href="./portfolio.html"><span class="studio">Портфоліо</span></a>
+          </li>
           <li><a href="./">Контакти</a></li>
         </ul>
       </nav>
@@ -95,7 +97,7 @@
     <footer class="page-footer">
       <a href="#" class="logo-footer"><span lang="en">Web</span>Studio</a>
       <address>
-         <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="info-footer">
           <li>
             <a href="mailto:info@devstudio.com"><span lang="en">info@devstudio.com</span></a>
