--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li>
-            <a href="./">Контакт</a>
+            <a href="./">Контакти</a>
           </li>
         </ul>
       </nav>
